# BundleWalker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-SCOPE.md  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  publish-pypi.yml  publish-testpypi.yml  rehearse-production-lifecycle.yml
.superpowers/sdd/: final-closure-fix-report.md  final-review-fixes-report.md  whole-branch-fix-report.md
benchmarks/: __init__.py  __main__.py  contracts.py  crash_worker.py  evidence.py  fixtures.py  profiles.py  report.py  runner.py  worker.py
benchmarks/evidence/: SHA256SUMS  report.md  suite-1-dfaa31dfca3a431e7b2e2cb1ceda1e2cc0df286c-Linux-py3.13-29789436063.json  suite-1-dfaa31dfca3a431e7b2e2cb1ceda1e2cc0df286c-Linux-py3.14-29789436063.json  suite-1-dfaa31dfca3a431e7b2e2cb1ceda1e2cc0df286c-macOS-py3.13-29789436063.json  suite-1-dfaa31dfca3a431e7b2e2cb1ceda1e2cc0df286c-macOS-py3.14-29789436063.json
benchmarks/scenarios/: __init__.py  mcp_startup.py  mutation.py  read_only.py
docs/: hermes-mcp-setup.md  mcp-compatibility.md  performance-and-capacity.md  tutorial.md  user-guide.md  vscode-copilot-mcp-setup.md  workspace-compatibility.md
docs/maintainers/: releases.md
docs/maintainers/evidence/: 2026-07-22-production-lifecycle-0.4.0rc2.md  2026-07-24-production-lifecycle-0.4.0rc3.md
docs/superpowers/plans/: 2026-07-15-bundlewalker-v1.md  2026-07-16-conventions-style-presets.md  2026-07-16-documentation-suite-refresh.md  2026-07-16-end-user-guide.md  2026-07-16-ignore-environment-files.md  2026-07-16-ingestion-output-repair.md  2026-07-16-synthesis-orphan-lint.md  2026-07-16-synthesis-refresh.md  2026-07-17-mcp-interface-foundation.md  2026-07-18-bundlewalker-v2-release.md  2026-07-18-gpl-licensing.md  2026-07-18-hermes-mcp-setup-guide.md  2026-07-18-public-beta-milestone-a.md  2026-07-18-workspace-lifecycle-safety.md  2026-07-19-bundlewalker-0.4.0a2-release.md  2026-07-19-bundlewalker-doctor-diagnostics.md  2026-07-19-final-whole-branch-review-fixes.md  (+10 more)
evals/: cases.yaml
scripts/: rehearse_production_lifecycle.py
src/bundlewalker/: __init__.py  __main__.py  backups.py  changes.py  cli.py  compatibility.py  conventions.py  coordination.py  domain.py  errors.py  paths.py  retrieval.py  transactions.py  upgrades.py  workspace.py
tests/: __init__.py  historical_fixtures.py  test_acceptance.py  test_backups.py  test_changes.py  test_compatibility.py  test_conventions.py  test_coordination.py  test_domain.py  test_historical_compatibility.py  test_production_lifecycle_rehearsal.py  test_project_automation.py  test_release_metadata.py  test_retrieval.py  test_transaction_crash_recovery.py  test_transaction_diagnostics.py  test_transactions.py  test_upgrades.py  test_workspace.py
tests/agents/: __init__.py  test_common.py  test_ingest.py  test_query.py  test_semantic_lint.py
tests/application/: __init__.py  test_contracts.py  test_diagnostics.py  test_facade.py  test_lifecycle.py
tests/benchmarks/: __init__.py  factories.py  test_evidence.py  test_fixtures.py  test_mutation_scenarios.py  test_profiles.py  test_read_only_scenarios.py  test_report.py  test_runner.py  test_worker.py
tests/cli/: __init__.py  test_ask.py  test_doctor.py  test_ingest.py  test_init.py  test_lint.py  test_review.py  test_workspace.py
tests/evals/: __init__.py  test_model_quality.py  test_refresh_quality_contract.py
tests/interfaces/: __init__.py  test_mcp_resources.py  test_mcp_stdio.py  test_mcp_tools.py
tests/okf/: test_derived.py  test_documents.py  test_lint.py  test_repository.py
tests/workflows/: __init__.py  test_ask.py  test_ingest.py  test_lint.py
(+83 files in other folders)
