[project]
name = "bundlewalker"
version = "0.2.0"
description = "Build a review-first personal knowledge wiki with OKF and PydanticAI."
readme = "README.md"
license = "GPL-3.0-or-later AND CC0-1.0"
license-files = ["LICENSE", "LICENSES/CC0-1.0.txt", "LICENSE-SCOPE.md"]
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.26,<5",
    "markdown-it-py>=4.0.0",
    "mcp>=1.28.1,<2",
    "pydantic-ai>=2.10.0",
    "pyyaml>=6.0.0",
    "typer>=0.16.0",
]

[project.scripts]
bundlewalker = "bundlewalker.cli:app"
bundlewalker-mcp = "bundlewalker.interfaces.mcp:main"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: opt-in live-model quality evaluations (requires BUNDLEWALKER_EVAL_MODEL)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
