[project]
name = "bundlewalker"
version = "0.4.0a2"
description = "Build a review-first personal knowledge wiki with OKF and PydanticAI."
readme = "README.md"
license = "GPL-3.0-or-later AND CC0-1.0"
license-files = ["LICENSE", "LICENSES/CC0-1.0.txt", "LICENSE-SCOPE.md"]
requires-python = ">=3.13"
authors = [{ name = "Hendrik Reh" }]
maintainers = [{ name = "Hendrik Reh" }]
keywords = [
    "knowledge-base",
    "markdown",
    "mcp",
    "okf",
    "pydantic-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.26,<5",
    "markdown-it-py>=4.0.0",
    "mcp>=1.28.1,<2",
    "pydantic-ai>=2.10.0",
    "pyyaml>=6.0.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/HendrikReh/BundleWalker"
Documentation = "https://github.com/HendrikReh/BundleWalker#documentation"
Repository = "https://github.com/HendrikReh/BundleWalker"
Issues = "https://github.com/HendrikReh/BundleWalker/issues"
Changelog = "https://github.com/HendrikReh/BundleWalker/blob/master/CHANGELOG.md"

[project.scripts]
bundlewalker = "bundlewalker.cli:app"
bundlewalker-mcp = "bundlewalker.interfaces.mcp:main"

[dependency-groups]
dev = [
    "pip-audit>=2.9,<3",
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
    "twine>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".superpowers/**"]

[tool.hatch.build.targets.sdist.force-include]
"tests/fixtures/historical/empty-directories.json" = "tests/fixtures/historical/empty-directories.json"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: opt-in live-model quality evaluations (requires BUNDLEWALKER_EVAL_MODEL)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
